# aps-viewer-sdk

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  DEV_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aps_viewer_sdk/: __init__.py  client.py  helper.py  main.py  viewer.html
aps_viewer_sdk/plugins/: __init__.py
aps_viewer_sdk/plugins/draw_2d_circles/: __init__.py
aps_viewer_sdk/plugins/overlay_meshes/: __init__.py
example/: color_elements_from_scene.ipynb
example/1 - highlight_elements_in_scene/: color_elements_from_scene.ipynb
example/2 - add_meshes_to_scene/: add_trees_to_scene.ipynb
example/3 - add_circles_2d_view/: add_circles_to_2d_view.ipynb
tests/: circle_plugin_test.py  overlay_meshes_test.py  sphere_plugin_test.py  view_test.py
tests/integration/: view_test.py
